--- a/AS608/MDK-ARM/AS608/AS608.build_log.htm
+++ b/AS608/MDK-ARM/AS608/AS608.build_log.htm
@@ -21,16 +21,12 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-E:\SmartLock\AS608\MDK-ARM\AS608.uvprojx
+D:\STM32SmartLcok\AS608\MDK-ARM\AS608.uvprojx
 Project File Date:  03/22/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\keil_mdk\ARM\ARMCC\Bin'
 Build target 'AS608'
-compiling main.c...
-linking...
-Program Size: Code=18304 RO-data=2384 RW-data=1732 ZI-data=2404  
-FromELF: creating hex file...
 "AS608\AS608.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -55,7 +51,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
