--- a/AS608/MDK-ARM/AS608/AS608.build_log.htm
+++ b/AS608/MDK-ARM/AS608/AS608.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  05/05/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\keil_mdk\ARM\ARMCC\Bin'
 Build target 'AS608'
+compiling menu.c...
+linking...
+Program Size: Code=21964 RO-data=2400 RW-data=2196 ZI-data=2404  
+FromELF: creating hex file...
 "AS608\AS608.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
